--- a/_data/template.yml
+++ b/_data/template.yml
@@ -1,8 +1,8 @@
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: 8b0000
-  secondary: c40000   
-  secondary-dark: 722f37
+  primary: BD541C
+  secondary: E86620
+  secondary-dark: 2F5073
   muted: 777
 
 # Font Families
